# zing

./: .gitignore  Cargo.toml  ICON_SETUP.md  LICENSE  README.md  index.html
.github/: build.yml
.github/workflows/: build-rust.yml  release-package.yml
assets/: icon.icns  index.html
src/: main.rs
src/buffer/: mod.rs
src/config/: mod.rs
src/file_io/: mod.rs
src/ui/: editor.rs  mod.rs  statusbar.rs  tabs.rs  toolbar.rs
webpage/: index.html  privacy.html
