[package]
name = "zing"
version = "0.1.0"
edition = "2021"
authors = ["Zing Contributors"]
description = "A fast, beautiful, cross-platform text editor written in Rust"
readme = "README.md"
license = "MIT"

# macOS specific configuration
[package.metadata.bundle]
name = "Zing"
identifier = "com.zing.editor"
icon = ["assets/icon.icns"]
version = "0.1.0"
copyright = "© 2025 Sukeesh"
category = "public.app-category.developer-tools"
short_description = "A fast, beautiful text editor built on Rust"

[dependencies]
# UI Framework
eframe = "0.24.1"  # egui framework with winit and web support
egui = "0.24.1"    # Immediate mode GUI library

# File handling
rfd = "0.12.1"     # Rust file dialogs (cross-platform)
tempfile = "3.8.1"  # Temporary files for printing and other operations

# Text buffer and editing
ropey = "1.6.1"    # Fast rope data structure for text editing
syntect = "5.1.0"  # Syntax highlighting (for future extension)

# Async utilities
tokio = { version = "1.34.0", features = ["rt", "fs", "io-util", "macros"] }

# Logging and error handling
log = "0.4.20"
env_logger = "0.10.1"
anyhow = "1.0.75"

# Image handling for app icon
image = "0.24.7"   # Image loading and manipulation

# For macOS bundling
cargo-bundle = "0.6.0"

# For windows bundling
[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.5", features = ["winuser"] }

[dev-dependencies]

[profile.release]
opt-level = 3      # Maximum optimization
lto = true         # Link-time optimization
codegen-units = 1  # Maximize performance
panic = "abort"    # Abort on panic in release mode
strip = true       # Strip symbols from binary
